# legacy-capital-case

./: .env.example  .gitignore  Dockerfile  GuiaEstudo_LegacyRetrieval.jsx  PLANO.md  README.md  case.md  docker-compose.yml  prd.md  pyproject.toml
.github/workflows/: ci.yml
config/: ir_sites.yaml
docs/: APRESENTACAO.md  PRESENTACAO.md  PROCESSO_ITERATIVO.md  PROD_TEST.md  apresentacao.html  apresentacao_legacy_case.pptx
eval/: questions.jsonl  results.json  results_retrieval.json
eval/fixtures/: questions_smoke.jsonl
eval/fixtures/documents/: bacen_ifdata_202603.json  cvm_bbdc4_67a92c344696.json  cvm_itub4_7388d9f6e31c.json  cvm_sanb11_7dc5f1a9dcc7.json  ri_msft_7b9106b17e9f.json  sec_0001018724_000101872426000002.json  sec_0001045810_000104581026000051.json  sec_0001045810_000104581026000060.json  sec_0001108524_000110852426000056.json  sec_0001326801_000162828026003832.json  sec_0001373715_000137371526000054.json  sec_0001535527_000153552725000005.json
scripts/: build_eval_fixtures.py  index.py  ingest.py  ingest_case_a.py  ingest_cases.py  prod_test.py  query.py  run_case_a.py  run_case_b.py  run_case_c.py  seed_demo_data.py  validate_cases.py
src/legacy_retrieval/: __init__.py  cases.py  config.py  models.py  pipeline.py
src/legacy_retrieval/api/: main.py
src/legacy_retrieval/eval/: harness.py  metrics.py  run.py
src/legacy_retrieval/generation/: llm.py
src/legacy_retrieval/indexing/: chunker.py  embeddings.py  indexer.py
src/legacy_retrieval/ingestion/: __init__.py  bacen.py  base.py  cvm.py  investor_relations.py  ir_scraper.py  news.py  sec_edgar.py
src/legacy_retrieval/parsing/: html.py  pdf.py
tests/: test_core.py  test_eval_smoke.py  test_ir_scraper.py
(+10 files in other folders)
