[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacy-retrieval"
version = "0.1.0"
description = "Legacy Capital AI Retrieval System for equities research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pdfplumber>=0.11.0",
    "qdrant-client>=1.12.0",
    "openai>=1.54.0",
    "sentence-transformers>=3.3.0",
    # <1.9: DLLs do 1.9.0 sao bloqueadas pelo Smart App Control no Windows
    "scikit-learn>=1.5,<1.9",
    "rank-bm25>=0.2.2",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
legacy-ingest = "scripts.ingest:app"
legacy-index = "scripts.index:app"
legacy-query = "scripts.query:app"
legacy-eval = "legacy_retrieval.eval.run:app"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
